--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body,
 
 body {
   background-color: #008000;
-  background-image: url("green_pixel_bg3.png");
+  background-image: url("green_pixel_bg.png");
   background-repeat: repeat;
   background-size: auto;
 }
